--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "version": "0.4.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "create-controller-db": "node controllers/create_db.js"
   },
   "type": "module",
   "keywords": [],
@@ -18,5 +19,8 @@
     "mime-types": "^2.1.35",
     "webaudio-node": "^0.1.2",
     "xhr-shim": "^0.1.3"
+  },
+  "devDependencies": {
+    "xml2js": "^0.6.2"
   }
 }
