--- a/knulli/es_systems_jsgames.cfg
+++ b/knulli/es_systems_jsgames.cfg
@@ -17,12 +17,18 @@
         <!-- The file extensions of ROMs that should be scanned into ESs gamelist.xml when the user rescans their gamelist. Delimited by whitespaces. You must include the period mark (.) and proper capitalization. -->
         <extension>.jsg</extension>
         <!-- Ordinarily this is the command line used to directly run the program, but Batocera relies on config generators to do so. This simply calls that generator, along with some other information. -->
-        <command>/userdata/system/jsgamelauncher/knulli/run.sh %CONTROLLERSCONFIG% -system %SYSTEM% -rom %ROM%</command>
+        <command>/userdata/system/jsgamelauncher/knulli/run.sh %CONTROLLERSCONFIG% -system %SYSTEM% -rom %ROM% -gameinfoxml %GAMEINFOXML% -addconcfg /userdata/system/configs/emulationstation/es_input.cfg</command>
+        <!-- <command>emulatorlauncher %CONTROLLERSCONFIG% -system jsgames -rom %ROM% -gameinfoxml %GAMEINFOXML% -systemname jsgames</command> -->
         <!-- The platform to use when scraping for metadata for this system's games. The full list of available platforms are in https://github.com/batocera-linux/batocera-emulationstation/blob/master/es-app/src/PlatformId.cpp -->
         <!-- <platform>3do</platform> -->
         <!-- The theme to load from the current theme-set, if supported. Usually, this is identical to the shortname. Check your theme's readme for more info. -->
         <!-- <theme>3do</theme> -->
         <emulators>
+            <emulator name="jsgames">
+                <cores>
+                    <core default="true">jsgames</core>
+                </cores>
+            </emulator>
         </emulators>
   </system>
 </systemList>
