--- a/package.json
+++ b/package.json
@@ -17,10 +17,9 @@
     "commander": "^12.1.0",
     "lowdb": "^7.0.1",
     "mime-types": "^2.1.35",
+    "web-worker": "^1.3.0",
     "webaudio-node": "^0.1.2",
-    "xhr-shim": "^0.1.3"
-  },
-  "devDependencies": {
+    "xhr-shim": "^0.1.3",
     "xml2js": "^0.6.2"
   }
 }
