--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "webaudio-node": "^0.1.2",
     "xhr-shim": "^0.1.3",
     "xml2js": "^0.6.2"
+  },
+  "devDependencies": {
+    "prettier": "3.4.2"
   }
 }
