--- a/package.json
+++ b/package.json
@@ -1,24 +1,32 @@
 {
-  "name": "jsgamelauncher",
+  "name": "rungame",
   "description": "A simple non-browser game launcher for web games",
-  "version": "0.4.0",
+  "version": "0.5.0",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "create-controller-db": "node controllers/create_db.js"
+  },
+  "bin": {
+    "rungame": "./cli.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/monteslu/jsgamelauncher.git"
   },
   "type": "module",
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@kmamal/sdl": "^0.10.7",
+    "@kmamal/sdl": "0.10.7",
     "@napi-rs/canvas": "^0.1.65",
     "commander": "^12.1.0",
     "lowdb": "^7.0.1",
     "mime-types": "^2.1.35",
     "web-worker": "^1.3.0",
     "webaudio-node": "^0.1.2",
+    "ws": "^8.18.0",
     "xhr-shim": "^0.1.3",
     "xml2js": "^0.6.2"
   },
